fix: Update vercel.json runtime to use valid Node.js version (nodejs20.x)

--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,1 @@
-{"functions":{"src/app/api/**/*.ts":{"runtime":"@vercel/node"}},"crons":[]}
+{"functions":{"src/app/api/**/*.ts":{"runtime":"nodejs20.x"}},"crons":[]}
