--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@date-fns/tz": "^1.2.0",
-    "@prisma/client": "^6.9.0",
+        "@date-fns/tz": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-icons": "^1.3.2",
@@ -21,18 +20,19 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/supabase-js": "^2.50.0",
     "@uploadthing/react": "^7.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "langchain": "^0.3.27",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "openai": "^5.1.1",
     "pdfjs-dist": "^5.3.31",
-    "pdfreader": "^3.0.7",
-    "prisma": "^6.9.0",
+        "pdfreader": "^3.0.7",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
@@ -43,6 +43,7 @@
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
+    "tsx": "^4.19.4",
     "uploadthing": "^7.7.2",
     "zod": "^3.25.56"
   },
