--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-        "@date-fns/tz": "^1.2.0",
+    "@date-fns/tz": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
@@ -32,7 +33,7 @@
     "next-themes": "^0.4.6",
     "openai": "^5.1.1",
     "pdfjs-dist": "^5.3.31",
-        "pdfreader": "^3.0.7",
+    "pdfreader": "^3.0.7",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
