--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
+    "googleapis": "^150.0.1",
     "langchain": "^0.3.27",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
