feat: Add experimental chat interface with AI-powered financial analysis - Rename /generative to /experimental page with enhanced chat UI, streaming responses, transaction cards, charts, Splitwise integration, purple experimental button, timestamps, and production-ready build

--- a/package.json
+++ b/package.json
@@ -39,10 +39,13 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-markdown": "^10.1.0",
     "react-pdf": "^9.2.1",
     "react-window": "^1.8.11",
     "react-window-infinite-loader": "^1.0.10",
     "recharts": "^2.15.3",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "tsx": "^4.19.4",
